tests/neg/i7359-f.scala
trait SAMTrait: // error
  def first(): String
  def equals[T >: Boolean <: Boolean](obj: Any): T
